--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
   </style>
 
   <link rel="stylesheet" href="C:\Users\Garei\OneDrive\Documentos\GitHub\news-homepage-main\assets\style\style.css">
+  <script defer src="assets/script/app.js"></script>
 </head>
 <body>
   <header>
     <nav>
       <img src="assets/images/logo.svg" alt="">
+      <div class="menu-icon">
+      </div>
+
       <ul class="nav-menu">
         <li><a href="#home">Home</a></li>
         <li><a href="#new">New</a></li>
@@ -32,7 +36,9 @@
   <main>
     <div class="upper-section">
       <div class="principal">
-        <img src="assets/images/image-web-3-desktop.jpg" alt="">
+        <div class="img-web">
+        </div>
+        
         <div>
           <h1>The Bright Future of Web 3.0?</h1>
           <div class="parag">
